# api-django-drf-test

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  genres_data.json  manage.py  pyproject.toml  tracks_data.json
api/: urls.py
api/auth/: serializers.py  views.py
api/genres/: models.py  views.py
api/migrations/: 0001_initial.py
api/tracks/: models.py  serializers.py  views.py
spot_test/: asgi.py  settings.py  urls.py  wsgi.py
